--- a/styles/web.css
+++ b/styles/web.css
@@ -336,6 +336,66 @@ code {
 }
 
 @media screen and (max-width: 800px) {
+  header ul {
+    position: absolute;
+    top: -100%;
+    left: 0;
+    width: 100%;
+    height: calc(100vh - 70vh);
+    padding: 0px 20px;
+    text-align: center;
+    overflow: auto;
+    transition: 0.5s;
+    background: #111;
+    flex-direction: column;
+    transform: translateY(-100%);
+}
+header.active ul {
+    top: 60px;
+    transform: translateY(0);
+}
+header ul li a {
+    margin: 5px 0;
+    font-size: 20px;
+    color: #fff;
+}
+.toggle {
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+}
+.toggle::before {
+    content: "";
+    position: absolute;
+    top: 4px;
+    width: 100%;
+    height: 2px;
+    background: #111;
+    z-index: 1;
+    box-shadow: 0 10px 0 #111;
+    transition: 0.5s;
+}
+.toggle::after {
+    content: "";
+    position: absolute;
+    bottom: 4px;
+    width: 100%;
+    height: 2px;
+    background: #111;
+    z-index: 1;
+    transition: 0.5s;
+}
+header.active .toggle::before {
+    top: 14px;
+    transform: rotate(45deg);
+    box-shadow: 0px 0px 0px #111;
+}
+header.active .toggle:after {
+    bottom: 14px;
+    transform: rotate(-45deg);
+}
   .hero-content {
     margin-top: 0;
     margin-bottom: 0;
