--- a/styles/web.css
+++ b/styles/web.css
@@ -195,6 +195,7 @@ footer span {
   margin-left: auto;
   margin-right: auto;
   width: 100%;
+  margin-top: 5rem;
   /* margin: auto;*/
 }
 
@@ -349,24 +350,24 @@ code {
     background: #111;
     flex-direction: column;
     transform: translateY(-100%);
-}
-header.active ul {
+  }
+  header.active ul {
     top: 60px;
     transform: translateY(0);
-}
-header ul li a {
+  }
+  header ul li a {
     margin: 5px 0;
     font-size: 20px;
     color: #fff;
-}
-.toggle {
+  }
+  .toggle {
     display: block;
     position: relative;
     width: 30px;
     height: 30px;
     cursor: pointer;
-}
-.toggle::before {
+  }
+  .toggle::before {
     content: "";
     position: absolute;
     top: 4px;
@@ -376,8 +377,8 @@ header ul li a {
     z-index: 1;
     box-shadow: 0 10px 0 #111;
     transition: 0.5s;
-}
-.toggle::after {
+  }
+  .toggle::after {
     content: "";
     position: absolute;
     bottom: 4px;
@@ -386,16 +387,16 @@ header ul li a {
     background: #111;
     z-index: 1;
     transition: 0.5s;
-}
-header.active .toggle::before {
+  }
+  header.active .toggle::before {
     top: 14px;
     transform: rotate(45deg);
     box-shadow: 0px 0px 0px #111;
-}
-header.active .toggle:after {
+  }
+  header.active .toggle:after {
     bottom: 14px;
     transform: rotate(-45deg);
-}
+  }
   .hero-content {
     margin-top: 0;
     margin-bottom: 0;
