--- a/styles/styles.css
+++ b/styles/styles.css
@@ -180,3 +180,11 @@ header ul li {
 header ul li a {
   margin: 0 15px;
 }
+
+.carousel-cell {
+  width: 100%;
+  }
+
+  /* cell number */
+  .carousel-cell:before {
+    display: block;
