--- a/styles/web.css
+++ b/styles/web.css
@@ -22,6 +22,7 @@ a {
 body {
   max-width: 90%;
   margin: auto;
+  overflow-x: hidden;
 }
 
 /* * header */
@@ -30,7 +31,7 @@ body {
   display: flex;
   margin: auto;
   max-width: 90%;
-  margin-top: 4rem;
+  margin-top: 10rem;
   margin-bottom: 4rem;
 }
 
@@ -209,7 +210,7 @@ footer span {
   margin-left: auto;
   margin-right: auto;
   width: 100%;
-  margin-top: 4rem;
+  margin-top: 7rem;
   margin-bottom: 4rem;
   /* margin: auto;*/
 }
@@ -317,6 +318,10 @@ code {
   height: 350px;
 }
 
+.toggle {
+  display: contents;
+}
+
 /* ******************************************* */
 
 /** Media Query */
@@ -337,7 +342,12 @@ code {
 }
 
 @media screen and (max-width: 800px) {
+  .dev {
+    display: none;
+  }
+
   header ul {
+    font-weight: 400;
     position: absolute;
     top: -100%;
     left: 0;
@@ -347,7 +357,7 @@ code {
     text-align: center;
     overflow: auto;
     transition: 0.5s;
-    background: #111;
+    background: var(--primary-color);
     flex-direction: column;
     transform: translateY(-100%);
   }
@@ -366,6 +376,7 @@ code {
     width: 30px;
     height: 30px;
     cursor: pointer;
+    margin: 0 1rem;
   }
   .toggle::before {
     content: "";
@@ -373,9 +384,9 @@ code {
     top: 4px;
     width: 100%;
     height: 2px;
-    background: #111;
+    background: #fff;
     z-index: 1;
-    box-shadow: 0 10px 0 #111;
+    box-shadow: 0 10px 0 #fff;
     transition: 0.5s;
   }
   .toggle::after {
@@ -384,21 +395,21 @@ code {
     bottom: 4px;
     width: 100%;
     height: 2px;
-    background: #111;
+    background: #fff;
     z-index: 1;
     transition: 0.5s;
   }
   header.active .toggle::before {
     top: 14px;
     transform: rotate(45deg);
-    box-shadow: 0px 0px 0px #111;
+    box-shadow: 0px 0px 0px #fff;
   }
   header.active .toggle:after {
     bottom: 14px;
     transform: rotate(-45deg);
   }
   .hero-content {
-    margin-top: 0;
+    margin-top: 6rem;
     margin-bottom: 0;
     display: block;
   }
