--- a/styles/new.css
+++ b/styles/new.css
@@ -100,13 +100,13 @@
 .blog-btns > button {
   outline: none;
   cursor: pointer;
-  font-size: 1.3rem;
-  padding: 0.8rem 2rem;
+  font-size: 1.1rem;
+  padding: 0.6rem 1.2rem;
   background: none;
 }
 
 .blog-view {
-  margin: 4rem 0;
+  margin: 2rem 0;
 }
 
 .row {
@@ -153,6 +153,17 @@
   clear: both;
 }
 
+.dev {
+  position: absolute;
+  right: -378px;
+  top: -226px;
+  color: #eee;
+  font-size: 14rem;
+  transform: rotate(90deg) translate(100%, 100%);
+  font-weight: 900;
+  font-family: "JetBrains Mono", "Fira Code", monospace;
+}
+
 @media only screen and (max-width: 768px) {
   .project-overlap {
     flex-direction: column;
@@ -197,3 +208,24 @@
     border-radius: 1rem;
   }
 }
+
+/* scroll bar */
+
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--primary-color);
+  border-radius: 20px;
+  border: 6px solid transparent;
+  background-clip: content-box;
+}
+/* 
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--primary-color);
+} */
