--- a/styles/styles.css
+++ b/styles/styles.css
@@ -213,3 +213,20 @@ header ul li {
 .carousel-cell:before {
   display: block;
 }
+
+.career {
+  margin: auto;
+  display: flex;
+  max-width: 90%;
+  text-align: center;
+  margin-bottom: 4rem;
+  justify-content: space-around;
+}
+
+.vr {
+  border-left: 6px solid var(--primary-color);
+    border-radius: 10px;
+    margin-top: 2%;
+    margin-left: 15px;
+    margin-right: 15px;
+}
