--- a/styles/new.css
+++ b/styles/new.css
@@ -227,7 +227,48 @@ input:not(:focus):valid ~ .floating-label {
   transition: 0.2s ease all;
 }
 
+/* loader */
+
+.loader {
+  position: fixed;
+  z-index: 999999999;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loader {
+  background: #fff;
+}
+
+.loader > img {
+  width: 50%;
+  height: 80%;
+}
+
+.loader.hidden {
+  animation: fadeOut 3s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadeOut {
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
 @media only screen and (max-width: 768px) {
+  .loader > img {
+    width: 100%;
+    height: 80%;
+  }
+
   .project-overlap {
     flex-direction: column;
     width: 100%;
@@ -282,7 +323,7 @@ input:not(:focus):valid ~ .floating-label {
 
   .carousel-card {
     flex-direction: column;
-    margin: 0;
+    margin: 1rem 0;
     padding: 1rem;
     box-shadow: none;
   }
@@ -292,6 +333,15 @@ input:not(:focus):valid ~ .floating-label {
     border-radius: 0;
     margin: 1rem;
   }
+}
+
+.blog {
+  margin-top: 3rem;
+  margin-bottom: 4rem;
+}
+
+.blog > a {
+  color: var(--primary-color);
 }
 
 /* scroll bar */
@@ -310,7 +360,7 @@ input:not(:focus):valid ~ .floating-label {
   border: 6px solid transparent;
   background-clip: content-box;
 }
-/* 
-::-webkit-scrollbar-thumb:hover {
-  background-color: var(--primary-color);
-} */
+
+.flickity-page-dots {
+  margin: 2rem 0 !important;
+}
