--- a/styles/styles.css
+++ b/styles/styles.css
@@ -228,8 +228,9 @@ header ul li {
 
 .vr {
   border-left: 6px solid var(--primary-color);
-    border-radius: 10px;
-    margin-top: 2%;
-    margin-left: 15px;
-    margin-right: 15px;
+  border-radius: 10px;
+  margin-top: 2%;
+  margin-bottom: 5%;
+  margin-left: 15px;
+  margin-right: 15px;
 }
