--- a/styles/new.css
+++ b/styles/new.css
@@ -356,6 +356,15 @@ input:not(:focus):valid ~ .floating-label {
     border-radius: 0;
     margin: 1rem;
   }
+
+  .career {
+    flex-direction: column;
+    margin-bottom: 0;
+  }
+
+  .vr {
+    display: none;
+  }
 }
 
 .blog {
