made blogs responsive

--- a/styles/web.css
+++ b/styles/web.css
@@ -223,7 +223,7 @@ footer span {
   font-size: 4rem;
   color: #1c3548;
   line-height: 60px;
-  margin: 3rem 0;
+  margin: 9rem 0 3rem;
 }
 
 .projects-img-git {
