--- a/styles/new.css
+++ b/styles/new.css
@@ -86,6 +86,19 @@
   background: url(../images/projects/edukit.png) no-repeat center / cover;
 }
 
+.left-skillfulcv {
+  background: url(../images/projects/skillful-cv.png) no-repeat center / contain;
+}
+
+.left-mocky {
+  background: url(../images/projects/mocky.png) no-repeat center / contain;
+}
+
+.left-lift-simulation {
+  background: url(../images/projects/lift-simulation.png) no-repeat center /
+    contain;
+}
+
 .right {
   width: 100%;
   min-height: 500px;
